<resources>
    <string name="AJ_space_adjust">Cut Location:</string>
    <string name="AJ_width_adjust">Cut Width:</string>
    <string name="Collection">Favorite</string>
    <string name="ResUpdate">Data Upgrade</string>
    <string name="_1_1000_inch">1/1000 inch</string>
    <string name="_1_100_mm">1/100 mm</string>
    <string name="_1inch_1000">1 inch=1000</string>
    <string name="_1mm">1mm</string>
    <string name="_1mm_100">1mm=100</string>
    <string name="_1o_100">1°=100</string>
    <string name="a_side">A Side</string>
    <string name="ab_diff">AB Diff</string>
    <string name="ab_diff_shoulder">AB Diff Shoulder</string>
    <string name="ab_diff_tip">AB Diff Tip</string>
    <string name="ab_same">AB Same</string>
    <string name="ab_same_shoulder">AB Same Shoulder</string>
    <string name="ab_same_tip">AB Same Tip</string>
    <string name="about_us">About Us</string>
    <string name="activation">Activation</string>
    <string name="add_new_key">Add new key</string>
    <string name="add_picture">Add picture</string>
    <string name="add_text">Add text</string>
    <string name="address">Address</string>
    <string name="adjust_extra_cut_position">Adjust Extra Cut Position</string>
    <string name="adjust_size">Adjust Size</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="after_distance_test_please_press_corresponding_button_for_calibration_according_to_the_used_jaw">After distance calibration, please calibrate the jaw you will use.</string>
    <string name="agree">Agree</string>
    <string name="agree_to_the_privacy_policy">Must first agree to the privacy policy</string>
    <string name="align">Align:</string>
    <string name="align_no">Align</string>
    <string name="all_blank">All Blank</string>
    <string name="angle_key_clamp">Tibbe Key Jaw</string>
    <string name="app_has_downloaded">An update has just been downloaded.</string>
    <string name="app_name">Alpha Pro</string>
    <string name="app_name_alpha">Alpha</string>
    <string name="app_name_alpha_pro">Alpha Pro</string>
    <string name="app_name_black_widow_v1">Black Widow\nV1</string>
    <string name="app_name_black_widow_v2">Black Widow\nV2</string>
    <string name="app_name_e9">SEC-X</string>
    <string name="app_name_kukai">KuKai</string>
    <string name="app_name_neutral">Key Machine</string>
    <string name="app_name_spl">SPL</string>
    <string name="app_name_triton">Triton Plus</string>
    <string name="app_name_us">Triton</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approved">Approved</string>
    <string name="are_you_sure_delete_records">Are you sure you want to delete these records?</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="are_you_sure_to_upgrade">It takes a long time to upgrade the firmware. Are you sure you want to upgrade now?</string>
    <string name="ask_me_if_you_have_any_questions">Contact us if you have any questions</string>
    <string name="authenticate">Authenticate</string>
    <string name="auto">Auto</string>
    <string name="automobile">Automobile</string>
    <string name="automobile_key_clamp">Automobile Key Jaw</string>
    <string name="automotive">AUTOMOTIVE</string>
    <string name="ava">Ava</string>
    <string name="available_devices">Available devices</string>
    <string name="axis_speed">Axis Speed:</string>
    <string name="b_side">B Side</string>
    <string name="back">Back</string>
    <string name="bitting">Bitting:</string>
    <string name="bitting_no">Bitting</string>
    <string name="blade_creating_jaw">Blade Creating Jaw</string>
    <string name="blank_cut">Create Blade</string>
    <string name="blank_cut_jaw">Blade Creating Jaw</string>
    <string name="blank_cut_thickness">Thickness</string>
    <string name="blank_cut_width">Width</string>
    <string name="blank_head_groove_location">Groove Position</string>
    <string name="blank_head_groove_thickness">Groove Thickness</string>
    <string name="blank_head_length">Head Length</string>
    <string name="blank_head_thickness">Head Thickness</string>
    <string name="blank_head_width">Head Width</string>
    <string name="blankcut_thick_width_extra_cut">Don\'t cut a keyway with handle, otherwise it may damage cutter or even machine.</string>
    <string name="blitz_card">Blitz Card</string>
    <string name="bluetoooth_is_disconnected">Bluetooth is disconnected</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_connection_has_been_disconnected">Bluetooth connection has been disconnected</string>
    <string name="bluetooth_is_connected">Bluetooth is connected</string>
    <string name="bluetooth_is_not_connected_successfully">Bluetooth is not connected successfully</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">No more data</string>
    <string name="brvah_load_failed">load more failed</string>
    <string name="brvah_loading">Loading...</string>
    <string name="c_side">C Side</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibrating">calibrating</string>
    <string name="calibration">Calibration</string>
    <string name="calibration_faliled">Jaw calibration failed</string>
    <string name="calibration_is_complete">Calibration is complete</string>
    <string name="calibration_successful">Calibration successful</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_be_negative">Cannot be negative</string>
    <string name="cannot_load_this_data">Can\'t load this data</string>
    <string name="car_key">Car Key</string>
    <string name="card">Card</string>
    <string name="card_type">Card Type</string>
    <string name="card_value">Card Value</string>
    <string name="cars">Cars</string>
    <string name="caution">Caution</string>
    <string name="centered">Centered</string>
    <string name="change_cutter_to_decoder">Change cutter to decoder.</string>
    <string name="change_cutter_to_decoder_disassemble">Change cutter to decoder,remove the flat milling block</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="china_key_number">China Key Number</string>
    <string name="chinese_car">Chinese Car</string>
    <string name="chip_text">Chip text</string>
    <string name="clamp">Jaw</string>
    <string name="clamp_calibration">Jaw Calibration</string>
    <string name="clamp_title">Jaw:</string>
    <string name="clean_jaw_doublekey">Make sure jaw is clear of debris</string>
    <string name="clean_the_groove_from_chips">Make sure jaw is clear of debris</string>
    <string name="clear">Clear</string>
    <string name="clear_clamp_and_install_key">Make sure jaw is clear of debris and install the key according to the picture</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_edit_to_add_a_note">Click Edit to add a note</string>
    <string name="click_on_the_picture_to_start_decode">Click on the picture to start decode</string>
    <string name="close">Close</string>
    <string name="close_app">Close app</string>
    <string name="code">Code</string>
    <string name="code_num">Code</string>
    <string name="code_series">Code Series</string>
    <string name="collection_completed">Collection completed</string>
    <string name="collection_failed">Collection failed</string>
    <string name="commercial_keys">Commercial Keys</string>
    <string name="commercial_residential">COMMERCIAL/RESIDENTIAL</string>
    <string name="communication_exception">Communication Exception</string>
    <string name="conductivity_test">Conductivity Test</string>
    <string name="conductivity_test_remind">Use a blade by touching jaw and decoder to test the conductivety. If beeps, the conductivity is good. If not, please contact manufacture to have further check.</string>
    <string name="configuration_file_delete_success">Configuration file delete success</string>
    <string name="connect">Connect</string>
    <string name="connect_to_the_network_for_authentication_1">You have %d keys remaining before this machine must connect to the internet for critical updates. Please contact TRITON technical support for any questions.</string>
    <string name="connect_to_the_network_for_authentication_2">After cutting %d keys offline, this machine will stop operation.This machine must connect to the internet for critical updates. Please contact TRITON technical support for any questions.</string>
    <string name="connect_to_the_network_for_authentication_3">This machine requires the installation of critical updates before resuming operation. Please connect it to the internet now.Contact TRITON technical support for any questions.</string>
    <string name="connect_to_the_network_for_authentication_4">Authorized operation of this machine not permitted in current region. Please contact TRITON technical support for further instructions.</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_device">Connecting device</string>
    <string name="connecting_device_u">Connect</string>
    <string name="connecting_dot">connecting...</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue1">continue</string>
    <string name="cpu_id_not_found">Cpu id not found</string>
    <string name="creat_groove">Create Groove</string>
    <string name="create_hy18_from_kk12">create HY18 from KK12</string>
    <string name="create_key">Create Key</string>
    <string name="create_thickness">Create Thickness</string>
    <string name="create_width">Create Width</string>
    <string name="cross_border_error">Cross-border error</string>
    <string name="current_version">Local Version:</string>
    <string name="cut">Cut</string>
    <string name="cut_5mm_more">Cut extra 5mm</string>
    <string name="cut_blank_head">Create Key Head</string>
    <string name="cut_depth">Cut Depth:</string>
    <string name="cut_depth_no">Cut Depth</string>
    <string name="cuts">Cuts</string>
    <string name="decimal">Decimal:</string>
    <string name="decode">Decode</string>
    <string name="delete_all">Delete All</string>
    <string name="dimple">Dimple</string>
    <string name="double_ingroove">Double Internal Groove</string>
    <string name="double_outgroove">Double External Groove</string>
    <string name="double_standard">Double Standard</string>
    <string name="enter_search_content">Input name of key</string>
    <string name="ic_card">ID</string>
    <string name="ignition_lock_door_lock_check">All Key Lost</string>
    <string name="invert_bitting">Invert bitting</string>
    <string name="last">Last</string>
    <string name="lee_s_tool">Lishi Tool</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="rounding">Rounding</string>
    <string name="shoulder">Shoulder</string>
    <string name="single_ingroove">Single Internal Groove</string>
    <string name="single_outgroove">Single External Groove</string>
    <string name="single_standard">Single Standard</string>
    <string name="stop">Stop</string>
    <string name="tip">Tip</string>
    <string name="tubular">Tubular</string>
</resources>