<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="?attr/color_blackDark_blueLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.kkkcut.e20j.androidquick.autolayout.widget.AutoRadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="160px"
        android:layout_marginTop="110px">
        <RadioButton
            android:textSize="24px"
            android:textColor="@color/white"
            android:gravity="bottom|center_horizontal"
            android:id="@+id/rb_shoulder"
            android:paddingBottom="20px"
            android:layout_width="220px"
            android:layout_height="match_parent"
            android:checked="true"
            android:button="@null"
            android:text="@string/shoulder"
            android:maxLines="2"/>
        <RadioButton
            android:textSize="24px"
            android:textColor="@color/white"
            android:gravity="bottom|center_horizontal"
            android:id="@+id/rb_tip"
            android:paddingTop="85px"
            android:paddingBottom="20px"
            android:layout_width="220px"
            android:layout_height="match_parent"
            android:layout_marginLeft="160px"
            android:button="@null"
            android:text="@string/tip"
            android:maxLines="2"/>
    </com.kkkcut.e20j.androidquick.autolayout.widget.AutoRadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110px">
        <Button
            android:textColor="@color/color_ff205f"
            android:id="@+id/bt_last"
            android:background="@drawable/bg_white_10dp"
            android:layout_width="200px"
            android:layout_height="50px"
            android:text="@string/last"
            android:textAllCaps="false"/>
        <Button
            android:textColor="@color/white"
            android:id="@+id/bt_next"
            android:background="@drawable/bg_button_ff205f"
            android:layout_width="200px"
            android:layout_height="50px"
            android:layout_marginLeft="88px"
            android:text="@string/next"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>
