<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/color_1b1a28"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60px">
        <EditText
            android:textSize="20px"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:id="@+id/et_search"
            android:background="@drawable/bg_edittext"
            android:paddingLeft="20px"
            android:paddingRight="50px"
            android:layout_width="0px"
            android:layout_height="40px"
            android:layout_marginLeft="40px"
            android:hint="@string/enter_search_content"
            android:drawableLeft="@drawable/search_key_select"
            android:drawablePadding="10px"
            android:layout_weight="1"/>
        <Button
            android:textColor="@color/white"
            android:id="@+id/bt_delete_all"
            android:background="@drawable/bg_button_ff205f"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="40px"
            android:text="@string/delete_all"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="12px"
        android:paddingRight="12px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="24px"
            android:textColor="@color/white"
            android:layout_width="260px"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <View
            android:textSize="24px"
            android:textColor="@color/white"
            android:layout_width="400px"
            android:layout_height="1px"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:textSize="22px"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="80px"
                android:layout_height="wrap_content"
                android:text="@string/cuts"/>
            <TextView
                android:textSize="22px"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ic_card"
                android:layout_weight="1"/>
            <View
                android:layout_width="70px"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="70px"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"/>
    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/bt_get_test_data"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="获取测试数据"/>
</LinearLayout>
