<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="?attr/color_blackDark_blueLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:orientation="vertical"
        android:background="?attr/bg_keyopration_left"
        android:layout_width="533px"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/fl_key"
            android:background="@drawable/bg_key_input"
            android:paddingLeft="10px"
            android:paddingRight="10px"
            android:layout_width="462px"
            android:layout_height="308px"
            android:layout_marginLeft="25px"
            android:layout_marginTop="25px"/>
        <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="351px">
            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="107px"
                android:layout_height="80px"
                android:layout_marginLeft="27px"
                android:src="?attr/input_control_up"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                app:layout_auto_basewidth="height"/>
            <ImageView
                android:id="@+id/iv_down"
                android:layout_width="107px"
                android:layout_height="80px"
                android:layout_marginLeft="11px"
                android:src="?attr/input_control_down"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                app:layout_auto_basewidth="height"/>
            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="107px"
                android:layout_height="80px"
                android:layout_marginLeft="11px"
                android:src="?attr/input_control_left"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                app:layout_auto_basewidth="height"/>
            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="107px"
                android:layout_height="80px"
                android:layout_marginLeft="11px"
                android:src="?attr/input_control_right"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                app:layout_auto_basewidth="height"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="bottom|right"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="80px">
            <TextView
                android:textSize="22px"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@+id/bt_cancle"
                android:background="?attr/cancle"
                android:paddingLeft="55px"
                android:paddingRight="15px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
            <TextView
                android:textSize="22px"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@+id/ll_confirm"
                android:background="?attr/confirm"
                android:paddingLeft="55px"
                android:paddingRight="15px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="40px"
                android:text="@string/ok"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="24px"
            android:textColor="?attr/textColor_ffffff_333333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:text="@string/decimal"/>
        <FrameLayout
            android:background="@drawable/bg_key_input"
            android:layout_width="461px"
            android:layout_height="80px"
            android:layout_marginLeft="10px">
            <Switch
                android:textColor="@color/textcolor_333333"
                android:layout_gravity="center_vertical"
                android:id="@+id/switch_decimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24px"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"
                android:switchMinWidth="20dp"
                android:showText="true"/>
            <Button
                android:textSize="16px"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/bt_rounding"
                android:background="@drawable/bg_button_ff205f_r10_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24px"
                android:text="@string/rounding"
                android:textAllCaps="false"/>
        </FrameLayout>
        <CheckBox
            android:textSize="20px"
            android:textColor="?attr/textColor_ffffff_333333"
            android:id="@+id/cb_invert"
            android:paddingLeft="20px"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="30px"
            android:button="?attr/checkbox"
            android:text="@string/invert_bitting"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ll_input_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="30px">
            <Button
                android:textSize="20px"
                android:textColor="#fff"
                android:id="@+id/bt_input_rule"
                android:background="@drawable/bg_button_ff205f_r10_selector"
                android:padding="10px"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lee_s_tool"
                android:textAllCaps="false"/>
            <Button
                android:textSize="20px"
                android:textColor="#fff"
                android:id="@+id/bt_ignition_door"
                android:background="@drawable/bg_button_ff205f_r10_selector"
                android:padding="10px"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:text="@string/ignition_lock_door_lock_check"
                android:textAllCaps="false"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_gravity="center_horizontal"
            android:id="@+id/rv_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35px"/>
    </LinearLayout>
</LinearLayout>
